# Multithreading

./: CMakeLists.txt  main.cpp
board/: Board.cpp  Board.h  BoardFabric.cpp  BoardFabric.h
client/: main.cpp
console/: Console.cpp  Console.h
game/: Game.cpp  Game.h  GameFactory.cpp  GameFactory.h
health/: HealthCalculator.cpp  HealthCalculator.h
playLogic/: FillingTheBoard.cpp  FillingTheBoard.h  PlayLogic.cpp  PlayLogic.h
player/: Player.cpp  Player.h
server/: main.cpp  server.cpp  server.h
ship/: Ship.cpp  Ship.h
tests/: health_test.cpp  play_logic_test.cpp  server_test.cpp  test_board.cpp  test_player.cpp
